[#859] Replace edge with istio
* Removed edge container and helm
* Removed legion-service package and their tests
* Removed python e2e tests
* Changed internal model api. `api/model/{id}/{version}` -> `/api/model`
